--- a/src/components/home/Home.css
+++ b/src/components/home/Home.css
@@ -6,5 +6,28 @@
 }
 
 .logo {
-    box-shadow: 0 6px 10px 2px black;
+    width: 600px;
+    border: 1px solid black;
+    border-radius: 10px;
 }
+
+.home-intro-container, .home-guarantee-container {
+    margin-top: 20%;
+    margin-bottom: 5%;
+    border: 1px solid black;
+    padding: 5% 5% 2% 5%;
+    border-radius: 10px;
+}
+
+#intro-container-header {
+    font-weight: 900;
+}
+
+#intro-container-paragraph {
+    font-size: 1.15rem;
+}
+
+.lashes-img {
+    width: 80%;
+}
+
