--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,13 @@
 body {
   height: 100vh;
-  /* background: radial-gradient(#fff, #9a9b9c); */
-  background-image: url("./imgs/Olloqui_Background_less.png");
+  background: radial-gradient(#fff, #9a9b9c);
+  /* background-image: url("./imgs/Olloqui_Background_less.png"); */
   font-family: sans-serif;
 }
 
 .App {
-  margin-top: 2%;
+  margin-top: 5%;
+  margin-bottom: 5%;
   box-shadow: -5px 20px 10px 0 black;
   background-color: white;
   border: 2px solid #9a9b9c;
