--- a/src/components/home/Home.css
+++ b/src/components/home/Home.css
@@ -7,16 +7,18 @@
 
 .logo {
     width: 600px;
-    border: 1px solid black;
+    border-bottom: 7px solid #000;
+    border-left: 2px solid #000;
+    border-top: 1px solid #000;
+    border-right: 1px solid #000;
     border-radius: 10px;
+    box-shadow: -2px 7px 6px 0 #000;
 }
 
 .home-intro-container, .home-guarantee-container {
     margin-top: 20%;
     margin-bottom: 5%;
-    border: 1px solid black;
     padding: 5% 5% 2% 5%;
-    border-radius: 10px;
 }
 
 #intro-container-header {
@@ -28,6 +30,32 @@
 }
 
 .lashes-img {
-    width: 80%;
+    width: 100%;
+}
+
+.guarantee-details-row {
+    margin-top: 5%;
+    text-align: center;
+}
+
+#guarantee-header {
+    font-weight: 900;
+    padding: 2%;
+    text-align: center;
+    border-radius: 20px;
+    box-shadow: -2px 7px 6px 0 #000;
+    border-bottom: 7px solid #000;
+    border-left: 2px solid #000;
+    border-top: 1px solid #000;
+    border-right: 1px solid #000;
+}
+
+.lashes-img {
+    border-radius: 20px;
+    border-bottom: 7px solid #000;
+    border-left: 2px solid #000;
+    border-top: 1px solid #000;
+    border-right: 1px solid #000;
+    box-shadow: -2px 7px 6px 0 #000;
 }
 
