When a user clicks on  the book now button the service object is saved in the state of the book online container.

--- a/src/components/bookOnline/appointmentType/service/Service.css
+++ b/src/components/bookOnline/appointmentType/service/Service.css
@@ -41,6 +41,12 @@
     animation-duration: .8s;
 }
 
+.book-now-button:active {
+    border: none;
+    box-shadow: none;
+    animation: none;
+}
+
 @keyframes Book-Now-Button-Animation {
     33% {
         border-bottom: 5px solid #000;
