--- a/src/components/bookOnline/dateTime/calendar/calendarRow/calendarBox/CalendarBox.css
+++ b/src/components/bookOnline/dateTime/calendar/calendarRow/calendarBox/CalendarBox.css
@@ -1,3 +1,6 @@
 .calendar-box-container {
-    width: 14%;
+    width: 10%;
+    height: 100px;
+    background-color: red;
+    font-size: 0.75rem;
 }
