--- a/src/components/bookOnline/dateTime/calendar/calendarRow/calendarBox/CalendarBox.css
+++ b/src/components/bookOnline/dateTime/calendar/calendarRow/calendarBox/CalendarBox.css
@@ -3,5 +3,5 @@
     height: 75px;
     background-color: #fff;
     font-size: 0.75rem;
-    border: 1px solid black;
+    border-top: 1px solid black;
 }
