footer added to the website and is fixed on the bottom. Also the navbar is now fixed to the top.

--- a/src/components/nav/NavContainer.css
+++ b/src/components/nav/NavContainer.css
@@ -1,6 +1,11 @@
-.nav-container-row {
+.nav-container {
     padding: 1%;
     background-color: #9a9c9b;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    width: 100%;
 }
 
 .nav-links {
