--- a/src/components/home/Home.css
+++ b/src/components/home/Home.css
@@ -7,12 +7,12 @@
 
 .logo {
     width: 600px;
-    border-bottom: 7px solid #000;
+    /* border-bottom: 7px solid #000;
     border-left: 2px solid #000;
     border-top: 1px solid #000;
     border-right: 1px solid #000;
     border-radius: 10px;
-    box-shadow: -2px 7px 6px 0 #000;
+    box-shadow: -2px 7px 6px 0 #000; */
 }
 
 .home-intro-container, .home-guarantee-container {
@@ -57,5 +57,9 @@
     border-top: 1px solid #000;
     border-right: 1px solid #000;
     box-shadow: -2px 7px 6px 0 #000;
+}
+
+.guarantee-img-col, .guarantee-details-col, .intro-col {
+    margin: 0 auto;
 }
 
