--- a/src/components/bookOnline/dateTime/timeListing/timeSlotCard/TimeSlotCard.css
+++ b/src/components/bookOnline/dateTime/timeListing/timeSlotCard/TimeSlotCard.css
@@ -1,7 +1,31 @@
 .time-slot-card-col {
     padding: 1%;
-    margin: 4% 0;
+    margin: 4% auto;
+    font-weight: 900;
+}
+
+.time-div {
+    animation: Opacity-Appear;
+    animation-duration: 0.75s;
+    animation-iteration-count: 1;
     background-color: #9a9c9b;
     border-radius: 10px;
-    font-weight: 900;
+    width: 100%;
+    margin: 0 auto;
+    padding: 1%;
+    border: 1px solid black;
+    box-shadow: 0 0 2px 0 black;
+}
+
+.time-slot-card-col:hover {
+    cursor: pointer;
+}
+
+@keyframes Opacity-Appear {
+    from {
+        opacity: 0.0;
+    }
+    to {
+        opacity: 1.0
+    }
 }
