--- a/src/components/bookOnline/dateTime/calendar/calendarRow/calendarBox/CalendarBox.css
+++ b/src/components/bookOnline/dateTime/calendar/calendarRow/calendarBox/CalendarBox.css
@@ -7,6 +7,11 @@
     border-bottom: 2px solid black;
 }
 
+.calendar-box-container:hover {
+    cursor: pointer;
+    background-color: #9a9c9b;
+}
+
 .calendar-box-container:not(:first-child) {
     border-right: 1px solid black;
     border-left: 1px solid black;
