Book Online Container  is now able to gather all the information needed to set up and book an appointment with the lash service, the date for the appointment, the time, and the users information. Once the steps are followed and the information is gathered a confirmation message is shown.

--- a/src/components/bookOnline/userInfo/appointmentDetails/AppointmentDetails.css
+++ b/src/components/bookOnline/userInfo/appointmentDetails/AppointmentDetails.css
@@ -1,4 +1,5 @@
 #appointment-details-container {
     padding: 2%;
-    background-color: #aaa;
+    background-color: #ddd;
+    border-radius: 10px;
 }
