--- a/src/components/bookOnline/confirmationPage/ConfirmationPage.css
+++ b/src/components/bookOnline/confirmationPage/ConfirmationPage.css
@@ -10,3 +10,20 @@
     font-size: 1.25rem;
     text-align: left;
 }
+
+#book-again-button {
+    padding: 1% 2%;
+    border-radius: 10px;
+    border: 2px solid black;
+    background: radial-gradient(#eee, #999);
+}
+
+#book-again-button:hover {
+    box-shadow: -2px 4px 5px 0 black
+}
+
+#book-again-button:active {
+    box-shadow: none;
+    border: 1px solid black;
+    background: radial-gradient(#999, #eee);
+}
