Home page is laid out more uniformly and simpler design with less borders. Also the message displayed where the time listings should be has a red background to alert the user there are no available appointmets.

--- a/src/components/bookOnline/dateTime/timeListing/TimeListing.css
+++ b/src/components/bookOnline/dateTime/timeListing/TimeListing.css
@@ -5,3 +5,10 @@
 .time-slot-cards-container {
     margin-bottom: 10%;
 }
+
+#no-appointments-message {
+    padding: 10% 10% 4% 10%;
+    background-color: rgba(192, 18, 18, 0.75);
+    border-radius: 10px;
+    box-shadow: 0 0 3px 0 black;
+}
