--- a/src/components/about/AboutContainer.css
+++ b/src/components/about/AboutContainer.css
@@ -1,11 +1,15 @@
 
 #headshot {
     border-radius: 50%;
-    box-shadow: -2px 7px 10px 0 #000;
+    box-shadow: 0 0 3px 0 #000;
 }
 
 .About {
     margin-top: 15%;
+    background-color: #bcbebc;
+    padding: 5%;
+    border-radius: 10px;
+    box-shadow: 0 0 2px 0 black;
 }
 
 #about-name {
