--- a/src/components/bookOnline/appointmentType/AppointmentType.css
+++ b/src/components/bookOnline/appointmentType/AppointmentType.css
@@ -2,16 +2,13 @@
     margin-top: 10%;
 }
 
+
 .lash-services-container-row {
     height: 500px;
     overflow: auto;
-    border-bottom: 10px solid #000;
-    border-left: 7px solid #000;
-    border-top: 3px solid #000;
-    border-right: 3px solid #000;
-    border-radius: 5px;
-    margin-bottom: 5%;
-    box-shadow: -5px 5px 15px 0 #000, inset 0 0 10px #000;
+    border-radius: 10px;
+    margin-bottom: 10%;
+    box-shadow: 0 0 3px 0 black;
     padding: 3% 0;
-    background-color: #eee;
+    background-color: #bcbebc;
 }
