--- a/src/components/cartCard/CartCardContainer.css
+++ b/src/components/cartCard/CartCardContainer.css
@@ -8,6 +8,7 @@
     border-top-left-radius: 10px;
     border-bottom-left-radius: 10px;
     box-shadow: 0 0 3px 0 black;
+    z-index: 1000;
 }
 
 .cart-card-container:hover {
