--- a/src/components/shop/product/Product.css
+++ b/src/components/shop/product/Product.css
@@ -6,3 +6,105 @@
 .product-col {
     margin: 0 auto;
 }
+
+
+.product-container {
+    padding: 5%;
+    margin: 3%;
+}
+
+.product-col {
+    background-color: #fff;
+    border-radius: 10px;
+    box-shadow: 0 0 3px 0 black;
+    margin-bottom: 20px;
+}
+
+.product-name {
+    text-align: left;
+}
+
+.product-details {
+    font-weight: 100;
+    text-align: left;
+    font-size: 12px;
+}
+
+.add-to-cart-button {
+    border: none;
+    margin-top: 24px;
+    padding: 10px;
+    border-radius: 10px;
+    box-shadow: 0 0 2px 0 black;
+    background-color: #fff;
+}
+
+.add-to-cart-button:hover {
+    background-color: #9a9c9a;
+    box-shadow: 0 0 5px 0 black;
+}
+
+.quantity-error-container {
+    animation-name: Opacity-Appear;
+    animation-duration: 0.75s;
+    animation-iteration-count: 1;
+    background-color: rgba(73, 74, 75, 0.5);
+    height: 100%;
+    width: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 100;
+    border-radius: 10px;
+}
+
+@keyframes Opacity-Appear {
+    from {
+        opacity: 0.0;
+    }
+    to {
+        opacity: 1;
+    }
+}
+
+.disappear {
+    animation: Opacity-Disappear;
+    animation-duration: 600ms;
+    animation-iteration-count: 1;
+}
+
+@keyframes Opacity-Disappear {
+    from {
+        opacity: 1.0
+    }
+    to {
+        opacity: 0.0;
+    }
+}
+
+.quantity-error-message {
+    position: absolute;
+    top: 50%;
+    left: 25%;
+    width: 50%;
+    background-color: #f7022a;
+    padding: 10px 0;
+    border-radius: 10px;
+}
+
+.close-button-container {
+    background-color: #fff;
+    font-weight: 900;
+    width: 25px;
+    padding: 5px;
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    border-radius: 10px;
+    box-shadow: 0 0 3px 0 black;
+}
+
+.close-button-container:hover {
+    cursor: pointer;
+    box-shadow: 0 0 7px 0 black;
+}
