Starting to layout thhe cart details page

--- a/src/components/cartDetailsContainer/CartDetailsContainer.css
+++ b/src/components/cartDetailsContainer/CartDetailsContainer.css
@@ -1,3 +1,9 @@
 .cart-details-container {
     margin-top: 10%;
 }
+
+.products-in-cart-container {
+    height: 600px;
+    overflow: auto;
+    margin-top: 7%;
+}
