Now when an item is added to the cart the cart can hadle duplicate products. Instead of added a new entry to the cart it simply adjusts the quantity of the matching product.

--- a/src/components/cartDetailsContainer/productInCart/ProductInCart.css
+++ b/src/components/cartDetailsContainer/productInCart/ProductInCart.css
@@ -6,3 +6,23 @@
 .product-in-cart-image {
     width: 50%;
 }
+
+.product-in-cart-description {
+    margin-top: 50px;
+}
+
+.delete-item-col, .edit-quantity-col {
+    font-size: 14px;
+}
+
+.edit-quantity-col {
+    color: rgb(23, 39, 255);
+}
+
+.edit-quantity-col:hover, .delete-item-col:hover {
+    cursor: pointer;
+}
+
+.delete-item-col {
+    color: #f00;
+}
