--- a/src/components/training/trainingService/TrainingService.css
+++ b/src/components/training/trainingService/TrainingService.css
@@ -27,3 +27,70 @@
 .training-name {
     font-weight: 900;
 }
+
+.message-after-signup-container {
+    animation-name: Opacity-Appear;
+    animation-duration: 0.75s;
+    animation-iteration-count: 1;
+    background-color: rgba(0, 0, 0, 0.7);
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    z-index: 100;
+    padding: 2%;
+    border-radius: 10px;
+    box-shadow: 0 0 5px 0 black;
+}
+
+.close-signup-container {
+    animation-name: Opacity-Disappear;
+    animation-duration: 0.75s;
+    animation-iteration-count: 1;
+}
+
+.confirm-message-col {
+    width: 50%;
+    position: absolute;
+    top: 40%;
+    left: 25%;
+    background-color: #fff;
+    font-weight: 900;
+    padding: 2%;
+    border-radius: 10px;
+    box-shadow: 0 0 5px 0 black;
+}
+
+.close-signup-message {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    padding: 2%;
+    background-color: #fff;
+    font-weight: 900;
+    border-radius: 50%;
+    box-shadow: 0 0 3px 0 black;
+}
+
+.close-signup-message:hover {
+    box-shadow: 0 0 7px 0 black;
+    cursor: pointer;
+}
+
+@keyframes Opacity-Appear {
+    from {
+        opacity: 0.0;
+    }
+    to {
+        opacity: 1.0;
+    }
+}
+
+@keyframes Opacity-Disappear {
+    from {
+        opacity: 1.0;
+    }
+    to {
+        opacity: 0.0;
+    }
+}
